Fixed overflow on mobile.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,12 +21,17 @@
   display: none;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
     background-color: #fff;
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
     margin: 0;
-    min-height: 100vh
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 header, footer {
